--- a/serverless.yml
+++ b/serverless.yml
@@ -24,8 +24,8 @@ provider:
   region: ap-northeast-1
   profile: serverless
   environment:
-    CW_END_POINT: https://monitoring.ap-northeast-1.amazonaws.com
-    CW_REGION: ap-northeast-1
+    CW_ENDPOINT: https://monitoring.us-east-1.amazonaws.com
+    CW_REGION: us-east-1
   iamRoleStatements:
     - Effect: "Allow"
       Action:
