--- a/serverless.yml
+++ b/serverless.yml
@@ -23,14 +23,17 @@ provider:
   runtime: go1.x
   region: ap-northeast-1
   profile: serverless
-  environment:
-    CW_ENDPOINT: https://monitoring.us-east-1.amazonaws.com
-    CW_REGION: us-east-1
+  stage: ${opt:stage, self:custom.defaultStage}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
       - "cloudwatch:GetMetricStatistics"
       Resource: "*"
+  custom:
+    secret:
+      dev: ${file(./secret/dev.yml)}
+      prd: ${file(./secret/prd.yml)}
+    defaultStage: dev
 
 # you can overwrite defaults here
 #  stage: dev
@@ -67,6 +70,11 @@ functions:
     handler: release/bin/billing
     events:
     - schedule: cron(0 10 * * ? *)
+    environment:
+      CW_ENDPOINT: https://monitoring.us-east-1.amazonaws.com
+      CW_REGION: us-east-1
+      SLACK_CHANNEL_NAME: ${self.custom.secret.${self:provider.stage}.SLACK_CHALLNEL_NAME}
+      SLACK_WEBHOOK_URL: ${self.custom.secret.${self:provider.stage}.SLACK_WEBHOOK_URL}
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
