--- a/serverless.yml
+++ b/serverless.yml
@@ -23,7 +23,7 @@ provider:
   runtime: go1.x
   region: ap-northeast-1
   profile: serverless
-  stage: ${opt:stage, self:custom.defaultStage}
+  stage: ${opt:stage, 'dev'}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -33,7 +33,6 @@ provider:
     secret:
       dev: ${file(./secret/dev.yml)}
       prd: ${file(./secret/prd.yml)}
-    defaultStage: dev
 
 # you can overwrite defaults here
 #  stage: dev
@@ -73,8 +72,8 @@ functions:
     environment:
       CW_ENDPOINT: https://monitoring.us-east-1.amazonaws.com
       CW_REGION: us-east-1
-      SLACK_CHANNEL_NAME: ${self.custom.secret.${self:provider.stage}.SLACK_CHALLNEL_NAME}
-      SLACK_WEBHOOK_URL: ${self.custom.secret.${self:provider.stage}.SLACK_WEBHOOK_URL}
+      SLACK_CHANNEL_NAME: ${file(./secret/${self:provider.stage}.yml):SLACK_CHANNEL_NAME}
+      SLACK_WEBHOOK_URL: ${file(./secret/${self:provider.stage}.yml):SLACK_WEBHOOK_URL}
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
